# Advent-of-Code

./: .gitignore
2023/elixir/day_01/lib/: day01.ex
2023/elixir/day_01/test/: day01_test.exs
2023/elixir/day_02/: mix.exs
2023/elixir/day_02/bench/: bench.exs
2023/elixir/day_02/lib/: day02.ex
2023/elixir/day_02/test/: day02_test.exs
2023/rust/: Cargo.toml
2023/rust/day_01/: Cargo.toml
2023/rust/day_01/src/: main.rs
2023/rust/day_02/: Cargo.toml
2023/rust/day_02/benches/: benchmark.rs
2023/rust/day_02/src/: main.rs
2023/rust/day_03/: Cargo.toml
2023/rust/day_03/benches/: benchmark.rs
2023/rust/day_03/src/: lib.rs  main.rs
2023/rust/day_03/src/libs/: part1.rs  part2.rs
2023/rust/day_04/: Cargo.toml
2023/rust/day_04/benches/: benchmark.rs
2023/rust/day_04/src/: lib.rs  main.rs
2023/rust/day_05/: Cargo.toml
2023/rust/day_05/benches/: benchmark.rs
2023/rust/day_05/src/: lib.rs  main.rs
2023/rust/day_06/: Cargo.toml
2023/rust/day_06/benches/: benchmark.rs
2023/rust/day_06/src/: lib.rs  main.rs
2023/rust/day_07/: Cargo.toml
2023/rust/day_07/benches/: benchmark.rs
2023/rust/day_07/src/: hand.rs  hand2.rs  lib.rs  main.rs
2023/rust/day_08/: Cargo.toml
2023/rust/day_08/benches/: benchmark.rs
2023/rust/day_08/src/: lib.rs  main.rs
2023/rust/day_09/: Cargo.toml
2023/rust/day_09/benches/: benchmark.rs
2023/rust/day_09/src/: lib.rs  main.rs
2023/rust/day_10/: Cargo.toml
2023/rust/day_10/benches/: benchmark.rs
2023/rust/day_10/src/: lib.rs  main.rs
2023/swift/day_01/: Package.swift
(+5 files in other folders)
