[package]
name = "day_03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = {workspace = true}

# [lib]
# name = "mylib"
# path = "src/libs"

# [lib]
# name = "part2"
# path = "src/libs/part2.rs"

[[bench]]
name = "benchmark"
harness = false
# path = "benches/benchmark.rs"
